--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type=range] {
+  appearance: none;
+  width: 100%;
+  pointer-events: none;
+  background-color: transparent;
+  position: absolute;
+}
+
+input[type=range]::-webkit-slider-thumb {
+appearance: none;
+height: 30px;
+width: 30px;
+border-radius: 50%;
+background-color: white;
+pointer-events: all;
+box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  appearance: none;
+  height: 5px;
+}
